tests/paczka1/fuzzy1/65083299.err
Error in line 2: qub0rbM9kvF S346 57,49
Error in line 11: xkjRw S766 71,6
Error in line 16: qub0rbM9kvF S346 68,9
Error in line 1: S346 S346 80,7
Error in line 22: KSGbJNH7EzQ A435 10,5
Error in line 27: i3kyËloxSOK S766 367,0
Error in line 37: sDDG A435 39,3
